fix(layout): make event center aligned, remove min-width

--- a/fossevents/static/css/_event_list.scss
+++ b/fossevents/static/css/_event_list.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-flow: row wrap;
    -webkit-justify-content: flex-start;
-   justify-content: flex-start;
+   justify-content: center;
 
     .event{
         text-decoration: none;
